...

                    Button {
                        Task {
                            await authManager.login()
                        }
                    } label: {
                        Text("Sign in with GitHub")
                    }
                    .buttonStyle(ProminentButtonStyle())
                    .padding(.horizontal, 20)

                    Spacer()
                }
...
